# SquareCellsTAS

./: CMakeLists.txt  LICENSE  README.md  SquareCellsTAS.sln
SquareCellsTAS/: Configuration.cs  FrameCounter.cs  Level.cs  Loader.cs  Mouse.cs  SquareCellsTAS.csproj  Timing.cs  Vec2.cs
SquareCellsTAS/Properties/: AssemblyInfo.cs
data/: 1.lvl  10.lvl  11.lvl  12.lvl  13.lvl  14.lvl  15.lvl  16.lvl  17.lvl  18.lvl  19.lvl  2.lvl  20.lvl  21.lvl  22.lvl  23.lvl  24.lvl  25.lvl  26.lvl  27.lvl  28.lvl  29.lvl  3.lvl  30.lvl  31.lvl  32.lvl  33.lvl  34.lvl  35.lvl  36.lvl  4.lvl  5.lvl  6.lvl  7.lvl  8.lvl  9.lvl
src/: CMakeLists.txt  FileSystem.cpp  FileSystem.hpp  Level.cpp  Level.hpp  Mouse.cpp  Mouse.hpp  Timing.cpp  Timing.hpp  Vec2.cpp  Vec2.hpp  configuration.hpp  main.cpp
